syntax = "proto3";

package coder.boundary.v1;

option go_package = "github.com/coder/boundary/proto";

import "google/protobuf/timestamp.proto";

// BoundaryLog represents a log for a single resource access processed
// by boundary.
message BoundaryLog {
  message HttpRequest {
    string method = 1;
    string url = 2;
    // The rule that resulted in this HTTP request not being allowed.
    // Only populated when allowed = false.
    string matched_rule = 3;
  }

  // Whether boundary allowed this resource access.
  bool allowed = 1;

  // The timestamp when boundary processed this resource access.
  google.protobuf.Timestamp time = 2;

  // The resource being accessed by boundary.
  oneof resource {
    HttpRequest http_request = 3;
  }
}

// ReportBoundaryLogsRequest is a request to re-emit the given BoundaryLogs.
//
// NOTE: BoundaryLog and ReportBoundaryLogsRequest must stay wire-compatible with
// github.com/coder/boundary/proto/logs.proto which boundary uses to send logs
// over the Unix socket to the agent. This compatibility is hand-maintained for
// simplicity while boundary lives in a separate repository.
message ReportBoundaryLogsRequest {
  repeated BoundaryLog logs = 1;
}

message ReportBoundaryLogsResponse {}